# karaoke-jukebox

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  DEVELOPMENT.md  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  setup.sh  tasks.md
.github/: dependabot.yml
.github/workflows/: ci.yml  yt-dlp-canary.yml
alembic/: env.py
alembic/versions/: 4d2cfaf207c5_initial_tables.py
app/: config.py  database.py  main.py  rate_limit.py  validators.py
app/routes/: admin.py  auth.py  queue.py  search.py
app/services/: chromecast.py  download.py  playout.py  queue_manager.py  youtube.py
app/services/players/: __init__.py  chromecast_player.py  factory.py  mpv_player.py
app/templates/: admin.html  app.html  base.html  login.html
app/templates/partials/: admin_queue.html  modals.html  queue.html  search_form.html  search_results.html
docs/superpowers/plans/: 2026-07-05-playback-backend-abstraction.md  2026-07-07-mpv-player-backend.md  2026-07-10-pilot-mode.md  (+2 more)
src/: admin_routes.py  config.py  crud.py  db.py  dependencies.py  main.py  models.py  queue_routes.py  utils.py  youtube_utils.py
src/templates/: admin.html  admin_queue_partial.html  admin_status_message.html  base.html  index.html  login.html  queue.html  queue_bar.html  search.html  search_results.html
tests/: conftest.py  test_auth_session.py  test_chromecast.py  test_chromecast_player.py  test_config_extra.py  test_config_validation.py  test_database_migration.py  test_download.py  test_main.py  test_mpv_player.py  test_players.py  test_playout.py  test_queue_manager.py  test_queue_manager_full.py  test_rate_limit.py  test_routes.py  test_services_youtube_download.py  test_validators.py
(+7 files in other folders)
