[project]
name = "karaoke-jukebox"
version = "2.0.0"
description = "Mobile-first karaoke jukebox web app with Chromecast playback"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite",
    "apscheduler",
    "fastapi",
    "google-api-python-client",
    "gunicorn",
    "isodate",
    "itsdangerous",
    "jinja2",
    "pychromecast",
    "pydantic-settings",
    "python-multipart",
    "uvicorn[standard]",
    # yt-dlp is the most fragile dependency; the [default] extra pulls the EJS
    # JS-challenge solver. Keep it current (see `make preflight`).
    "yt-dlp[default]>=2026.6.9",
]

[project.optional-dependencies]
# Local video output backend (PLAYER_BACKEND=mpv). Needs the libmpv system
# library at runtime (Debian/Raspberry Pi OS: apt install libmpv2).
# Install on the Pi with: uv sync --extra mpv
# Floor at 1.0: the 0.x API family (Debian's apt python3-mpv) has a different
# event shape; the backend keeps only a read fallback for it, not support.
mpv = ["python-mpv>=1.0"]

# No [build-system]: this is a web app, not an installable package. uv manages
# the environment without trying to build/install the project itself. The ASGI
# app object is imported as app.main:app from the repository root.

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
]

[tool.pytest.ini_options]
# asyncio_mode = "auto" lets us write `async def test_...` without decorating
# every test with @pytest.mark.asyncio.
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit the live network (yt-dlp / YouTube). Opt-in via --run-integration.",
]
